--- a/Pages/Ansatte/Create.cshtml
+++ b/Pages/Ansatte/Create.cshtml
@@ -2,7 +2,8 @@
 @model VismaE2interRPWDWEDN.Pages.Ansatte.CreateModel
 
 @{
-    Layout = null;
+    ViewData["Title"] = "Create";
+    Layout = "_Layout";
 }
 
 <!DOCTYPE html>
