Lagt til stillinger i DB og endret en del av UI

--- a/Pages/About.cshtml
+++ b/Pages/About.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model VismaE2interRPWDWEDN.Pages.AboutModel
 @{
-    ViewData["Title"] = "Om denne web-applikasjonen";
+    ViewData["Title"] = "Om web-applikasjonen";
 }
 
 <div class="text-center">
