--- a/Pages/Ansatte/Delete.cshtml
+++ b/Pages/Ansatte/Delete.cshtml
@@ -2,7 +2,8 @@
 @model VismaE2interRPWDWEDN.Pages.Ansatte.DeleteModel
 
 @{
-    Layout = null;
+    ViewData["Title"] = "Delete";
+    Layout = "_Layout";
 }
 
 <!DOCTYPE html>
