--- a/Pages/Ansatte/Details.cshtml
+++ b/Pages/Ansatte/Details.cshtml
@@ -2,7 +2,8 @@
 @model VismaE2interRPWDWEDN.Pages.Ansatte.DetailsModel
 
 @{
-    Layout = null;
+    ViewData["Title"] = "Details";
+    Layout = "_Layout";
 }
 
 <!DOCTYPE html>
