--- a/Pages/Ansatte/Edit.cshtml
+++ b/Pages/Ansatte/Edit.cshtml
@@ -2,7 +2,8 @@
 @model VismaE2interRPWDWEDN.Pages.Ansatte.EditModel
 
 @{
-    Layout = null;
+    ViewData["Title"] = "Edit";
+    Layout = "_Layout";
 }
 
 <!DOCTYPE html>
