--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -28,7 +28,13 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/About">Om</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Ansatt">Om</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Ansatte/Index">Ansatte</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Stillinger/Index">Stillinger</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Oppgaver/Index">Oppgaver</a>
                         </li>
                     </ul>
                 </div>
