--- a/Pages/Stillinger/Index.cshtml
+++ b/Pages/Stillinger/Index.cshtml
@@ -1,10 +1,9 @@
 ﻿@page
-@model VismaE2interRPWDWEDN.Pages.Ansatte.IndexModel
+@model VismaE2interRPWDWEDN.Pages.Stillinger.IndexModel
 
 @{
     ViewData["Title"] = "Index";
-    Layout = "_Layout";
-}
+    Layout = "_Layout";}
 
 <!DOCTYPE html>
 
@@ -21,16 +20,28 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Ansatt[0].Name)
+                @Html.DisplayNameFor(model => model.Stilling[0].Name)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Stilling[0].PositionStartDate)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Stilling[0].PositionEndDate)
             </th>
             <th></th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model.Ansatt) {
+@foreach (var item in Model.Stilling) {
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.Name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.PositionStartDate)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.PositionEndDate)
             </td>
             <td>
                 <a asp-page="./Edit" asp-route-id="@item.ID">Edit</a> |
