Gjort endringer i UI ved Oppgaver

--- a/Pages/Oppgaver/Details.cshtml
+++ b/Pages/Oppgaver/Details.cshtml
@@ -27,6 +27,6 @@
     </dl>
 </div>
 <div>
-    <a asp-page="./Edit" asp-route-id="@Model.Oppgave.ID">Edit</a> |
-    <a asp-page="./Index">Back to List</a>
+    <a asp-page="./Edit" asp-route-id="@Model.Oppgave.ID">Rediger</a> |
+    <a asp-page="./Index">Tilbake til oppgaveoversikten</a>
 </div>
