--- a/Pages/Oppgaver/Create.cshtml
+++ b/Pages/Oppgaver/Create.cshtml
@@ -6,7 +6,7 @@
     Layout = "~/Pages/Shared/_Layout.cshtml";
 }
 
-<h1>Create</h1>
+<h1>Legg til ny</h1>
 
 <h4>Oppgave</h4>
 <hr />
@@ -25,14 +25,14 @@
                 <span asp-validation-for="Oppgave.OppgaveDato" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Legg til oppgaven" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-page="Index">Back to List</a>
+    <a asp-page="Index">Tilbake til oppgaveoversikten</a>
 </div>
 
 @section Scripts {
