--- a/Pages/Oppgaver/Delete.cshtml
+++ b/Pages/Oppgaver/Delete.cshtml
@@ -29,7 +29,7 @@
     
     <form method="post">
         <input type="hidden" asp-for="Oppgave.ID" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-page="./Index">Back to List</a>
+        <input type="submit" value="Slett" class="btn btn-danger" /> |
+        <a asp-page="./Index">Tilbake til oppgaveoversikten</a>
     </form>
 </div>
