--- a/Pages/Oppgaver/Edit.cshtml
+++ b/Pages/Oppgaver/Edit.cshtml
@@ -26,14 +26,14 @@
                 <span asp-validation-for="Oppgave.OppgaveDato" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Lagre endringer" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-page="./Index">Back to List</a>
+    <a asp-page="./Index">Tilbake til oppgaveoversikten</a>
 </div>
 
 @section Scripts {
