--- a/Pages/Oppgaver/Index.cshtml
+++ b/Pages/Oppgaver/Index.cshtml
@@ -6,10 +6,10 @@
     Layout = "~/Pages/Shared/_Layout.cshtml";
 }
 
-<h1>Index</h1>
+<h1>Oppgaver</h1>
 
 <p>
-    <a asp-page="Create">Create New</a>
+    <a asp-page="Create">Legg til ny</a>
 </p>
 <table class="table">
     <thead>
@@ -33,9 +33,9 @@
                 @Html.DisplayFor(modelItem => item.OppgaveDato)
             </td>
             <td>
-                <a asp-page="./Edit" asp-route-id="@item.ID">Edit</a> |
-                <a asp-page="./Details" asp-route-id="@item.ID">Details</a> |
-                <a asp-page="./Delete" asp-route-id="@item.ID">Delete</a>
+                <a asp-page="./Edit" asp-route-id="@item.ID">Rediger</a> |
+                <a asp-page="./Details" asp-route-id="@item.ID">Detaljer</a> |
+                <a asp-page="./Delete" asp-route-id="@item.ID">Slett</a>
             </td>
         </tr>
 }
