--- a/Pages/Ansatte/Create.cshtml
+++ b/Pages/Ansatte/Create.cshtml
@@ -26,15 +26,21 @@
                 <input asp-for="Ansatt.Name" class="form-control" />
                 <span asp-validation-for="Ansatt.Name" class="text-danger"></span>
             </div>
+            <div>
+                <label asp-for="Ansatt.Stilling" class="control-label"></label>
+                <select asp-for="Ansatt.Stilling" asp-items="Model.Stillinger">
+                    <option value="">  </option>
+                </select>
+            </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Legg til ansatt" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-page="Index">Back to List</a>
+    <a asp-page="Index">Tilbake til ansattoversikten</a>
 </div>
 
 @section Scripts {
