--- a/Pages/Ansatte/Index.cshtml
+++ b/Pages/Ansatte/Index.cshtml
@@ -15,13 +15,16 @@
 </head>
 <body>
 <p>
-    <a asp-page="Create">Create New</a>
+    <a asp-page="Create">Legg til ny ansatt</a>
 </p>
 <table class="table">
     <thead>
         <tr>
             <th>
                 @Html.DisplayNameFor(model => model.Ansatt[0].Name)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Ansatt[0].Stilling)
             </th>
             <th></th>
         </tr>
@@ -33,9 +36,12 @@
                 @Html.DisplayFor(modelItem => item.Name)
             </td>
             <td>
-                <a asp-page="./Edit" asp-route-id="@item.ID">Edit</a> |
-                <a asp-page="./Details" asp-route-id="@item.ID">Details</a> |
-                <a asp-page="./Delete" asp-route-id="@item.ID">Delete</a>
+                @Html.DisplayFor(modelItem => item.Stilling)
+            </td>
+            <td>
+                <a asp-page="./Edit" asp-route-id="@item.ID">Rediger</a> |
+                <a asp-page="./Details" asp-route-id="@item.ID">Detaljer</a> |
+                <a asp-page="./Delete" asp-route-id="@item.ID">Slett</a>
             </td>
         </tr>
 }
