--- a/Pages/Ansatte/Edit.cshtml
+++ b/Pages/Ansatte/Edit.cshtml
@@ -15,31 +15,43 @@
 </head>
 <body>
 
-<h4>Ansatt</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form method="post">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Ansatt.ID" />
-            <div class="form-group">
-                <label asp-for="Ansatt.Name" class="control-label"></label>
-                <input asp-for="Ansatt.Name" class="form-control" />
-                <span asp-validation-for="Ansatt.Name" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
-            </div>
-        </form>
+    <h4>Ansatt</h4>
+    <hr />
+    <div class="row">
+        <div class="col-md-4">
+            <form method="post">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <input type="hidden" asp-for="Ansatt.ID" />
+                <div class="form-group">
+                    <label asp-for="Ansatt.Name" class="control-label"></label>
+                    <input asp-for="Ansatt.Name" class="form-control" />
+                    <span asp-validation-for="Ansatt.Name" class="text-danger"></span>
+                </div>
+                <div>
+                    <label asp-for="Ansatt.Stilling" class="control-label"></label>
+                    <select asp-for="Ansatt.Stilling" asp-items="Model.Stillinger">
+                        <option value="">  </option>
+                    </select>
+                </div>
+                <div>
+                    <label asp-for="Ansatt.Oppgave" class="control-label"></label>
+                    <select asp-for="Ansatt.Oppgave" asp-items="Model.Oppgaver">
+                        <option value="">  </option>
+                    </select>
+                </div>
+                <div class="form-group">
+                    <input type="submit" value="Lagre endringer" class="btn btn-primary" />
+                </div>
+            </form>
+        </div>
     </div>
-</div>
 
-<div>
-    <a asp-page="./Index">Back to List</a>
-</div>
+    <div>
+        <a asp-page="./Index">Tilbake til ansattoversikten</a>
+    </div>
 
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
+    @section Scripts {
+        @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    }
 </body>
 </html>
