Lagt til søk etter ansatte ved index for ansatte

--- a/Pages/Ansatte/Index.cshtml
+++ b/Pages/Ansatte/Index.cshtml
@@ -1,57 +1,73 @@
 ﻿@page
 @model VismaE2interRPWDWEDN.Pages.Ansatte.IndexModel
 
+
 @{
     ViewData["Title"] = "Index";
     Layout = "_Layout";
 }
 
-<!DOCTYPE html>
 
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Index</title>
-</head>
-<body>
-<p>
-    <a asp-page="Create">Legg til ny ansatt</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Ansatt[0].Name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Ansatt[0].Stilling)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Ansatt[0].Oppgave)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model.Ansatt) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Stilling)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Oppgave)
-            </td>
-            <td>
-                <a asp-page="./Edit" asp-route-id="@item.ID">Rediger</a> |
-                <a asp-page="./Details" asp-route-id="@item.ID">Detaljer</a> |
-                <a asp-page="./Delete" asp-route-id="@item.ID">Slett</a>
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
-</body>
-</html>
+<script type="text/javascript" src="~/lib/jquery/dist/jquery.js"></script>
+
+    <p>
+        <a asp-page="Create">Legg til ny ansatt</a>
+    </p>
+    <form>
+        <p>
+            <input type="text" asp-for="SearchString" placeholder="Søk etter ansatt" 
+                         oninput="this.form.submit();" id="autofocusLastChar" />
+        </p>
+        <p>
+    </form>
+    <table class="table">
+        <thead>
+            <tr>
+                <th>
+                    @Html.DisplayNameFor(model => model.Ansatt[0].Name)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Ansatt[0].Stilling)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Ansatt[0].Oppgave)
+                </th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var item in Model.AnsattSearch)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Name)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Stilling)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Oppgave)
+                    </td>
+                    <td>
+                        <a asp-page="./Edit" asp-route-id="@item.ID">Rediger</a> |
+                        <a asp-page="./Details" asp-route-id="@item.ID">Detaljer</a> |
+                        <a asp-page="./Delete" asp-route-id="@item.ID">Slett</a>
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
+
+    <script type="text/javascript">
+        (function ($) {
+            $.fn.focusTextToEnd = function () {
+                this.focus();
+                var $thisVal = this.val();
+                this.val('').val($thisVal);
+                return this;
+            }
+        }(jQuery));
+        $("#autofocusLastChar").focusTextToEnd();
+    </script>
+
+
